# zkp-auth-rust

./: Cargo.toml  README.md  build.rs  rfc_5114_params.toml
proto/: zkp-auth.proto
src/: client.rs  lib.rs  proto.rs  server.rs
