[package]
name = "zkp-auth-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8"
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.6", features = ["v4"] }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
num = "0.4"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
